# adventure-game

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  README.zh.md  build.ps1  build_full_log.txt
.github/workflows/: ci-windows-mingw.yml
data/: README.md
data/levels/: sample_level.json
data/scenes/: sample_scene.json  template_scene.json
docs/: structure.md
include/: Event.h  Game.h  Scene.h  SceneLoader.h  Systems.h
requirements/private/: REQ-0002-implementation.md  REQ-0002.yaml
requirements/public/: README.md  template_req.yaml
src/: Event.cpp  Game.cpp  Scene.cpp  SceneLoader.cpp  Systems.cpp  main.cpp
tests/: README.md  run_tests.ps1  test_game.cpp  test_req_0001.cpp  test_scene_event.cpp  test_scene_loader.cpp  test_survival.cpp
